test/corpus/statements/typedef.txt
================================================================================
typedef
================================================================================
typedef int i32
--------------------------------------------------------------------------------
(compilationUnit
	(typedef
		(typePrimitive)
		(identifier)))

================================================================================
typedef
:skip
================================================================================
typedef SomeClass<int> SomeAlias
--------------------------------------------------------------------------------
(compilationUnit
	(typedef
		(type)
		(identifier)))
